--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,25 @@
   position:relative;
 }
 
+h2 {
+  text-align: center;
+  font-size: 18px;
+  padding-top: 10px;
+}
+form {
+  max-width: 350px;
+  margin: 0 auto;
+  padding: 20px 0px 0px;
+}
+
+.Form-para {
+  max-width: 350px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 18px;
+  padding: 20px 0px 0px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -22,13 +41,75 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(4px + 2vmin);
   color: white;
+  letter-spacing: 3px;
+}
+
+.Reg-wrapper {
+  max-width: 350px;
+  width: 100%;
+  height: auto;
+  padding: 60px, 45px;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #eee;
+  border-radius: 20px;
+}
+
+.Reg-title {
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 26px;
+  font-weight: bold;
+  color: #282c34;
+  letter-spacing: 2px;
+}
+
+.Reg-input {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+label {
+  font-size: 18px;
+  padding-left: 2px;
+}
+
+.Reg-input input {
+  width: 100%;
+  padding: 10px;
+  padding-left: 30px;
+  border: none;
+  box-sizing: border-box;
+  font-size: 18px;
+}
+
+.Reg-btn {
+  width: 70%;
+  margin: 20px auto 0;
+  padding: 12px 12px 20px;
+  text-align: center;
+  border-radius: 25px;
+}
+
+.Reg-btn button {
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.Reg-btn button:hover {
+  color: #145500;
 }
 
 .App-link {
